--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    buildTypes.each {
+        it.buildConfigField 'String', 'Movie_API_KEY', '"7c5abefc53acec71067d4859c75dbd0f"'
+    }
 }
 repositories {
     mavenCentral()
