--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,7 @@
             android:name=".data.MovieProvider"
             android:exported="false"
             android:syncable="true" />
+        <service android:name=".service.MovieService"/>
 
     </application>
 
