--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,14 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.popularmovie.android.appprotfolio.popularmovie.MainActivity" />
         </activity>
-
+        <activity
+            android:name=".WebViewActivity"
+            android:label="@string/title_activity_movie_details"
+            android:parentActivityName=".MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.popularmovie.android.appprotfolio.popularmovie.WebViewActivity" />
+        </activity>
         <provider
             android:authorities="@string/content_authority"
             android:name=".data.MovieProvider"
