Removed the API key

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,7 @@ android {
         }
     }
     buildTypes.each {
-        it.buildConfigField 'String', 'Movie_API_KEY', '"7c5abefc53acec71067d4859c75dbd0f"'
+        it.buildConfigField 'String', 'Movie_API_KEY', '"Put your Key here"'
     }
 
 }
